--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BeaverHacks Spring 2024 - Nyumat</title>
+    <title>WindexPoke - BeaverHacks Spring 2024 Project </title>
+    <meta name="title" content="WindexPoke - BeaverHacks Spring 2024 Project " />
+    <meta name="description" content="A " retro-themed" Windows 95 inspired OS featuring a Pokedex, media player, and MS
+        Paint. Built 100% in React by Nyumat." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://windexpoke.vercel.app/" />
+    <meta property="og:title" content="WindexPoke - BeaverHacks Spring 2024 Project " />
+    <meta property="og:description" content="A " retro-themed" Windows 95 inspired OS featuring a Pokedex, media player,
+        and MS Paint. Built 100% in React by Nyumat." />
+    <meta property="og:image" content="https://i.ibb.co/FD1v9N4/Screen-Shot-2024-05-28-at-1-39-39-AM.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://windexpoke.vercel.app/" />
+    <meta property="twitter:title" content="WindexPoke - BeaverHacks Spring 2024 Project " />
+    <meta property="twitter:description" content="A " retro-themed" Windows 95 inspired OS featuring a Pokedex, media
+        player, and MS Paint. Built 100% in React by Nyumat." />
+    <meta property="twitter:image" content="https://i.ibb.co/FD1v9N4/Screen-Shot-2024-05-28-at-1-39-39-AM.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
