--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WindexPoke - BeaverHacks Spring 2024 Project </title>
     <meta name="title" content="WindexPoke - BeaverHacks Spring 2024 Project " />
-    <meta name="description" content="A " retro-themed" Windows 95 inspired OS featuring a Pokedex, media player, and MS
+    <meta name="description" content="A retro-themed Windows 95 inspired OS featuring a Pokedex, media player, and MS
         Paint. Built 100% in React by Nyumat." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://windexpoke.vercel.app/" />
     <meta property="og:title" content="WindexPoke - BeaverHacks Spring 2024 Project " />
-    <meta property="og:description" content="A " retro-themed" Windows 95 inspired OS featuring a Pokedex, media player,
+    <meta property="og:description" content="A retro-themed Windows 95 inspired OS featuring a Pokedex, media player,
         and MS Paint. Built 100% in React by Nyumat." />
     <meta property="og:image" content="https://i.ibb.co/FD1v9N4/Screen-Shot-2024-05-28-at-1-39-39-AM.png" />
 
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://windexpoke.vercel.app/" />
     <meta property="twitter:title" content="WindexPoke - BeaverHacks Spring 2024 Project " />
-    <meta property="twitter:description" content="A " retro-themed" Windows 95 inspired OS featuring a Pokedex, media
+    <meta property="twitter:description" content="A retro-themed Windows 95 inspired OS featuring a Pokedex, media
         player, and MS Paint. Built 100% in React by Nyumat." />
     <meta property="twitter:image" content="https://i.ibb.co/FD1v9N4/Screen-Shot-2024-05-28-at-1-39-39-AM.png" />
 
